maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: method trouverSortie has return statement; needs result type
      if (aBiscuit(i,j)) {return i}
                          ^