maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  trouverSortie()
    // Your code here
}

def trouverSortie() = {
  var x = getMondeLargeur()
  var y = getMondeHauteur()
  for (i <- 0 to x-1) {
    for (j <- 0 to y-1) {
      if (aBiscuit(i,j)) {return i}
    }
  }
}